Fix issues on mobile with double tapping

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@
 @layer base {
   :root {
 
+    touch-action: manipulation;
+
     --background: 0 0% 100%;
 
     --foreground: 222.2 84% 4.9%;
@@ -58,6 +60,8 @@
     --radius: 0.5rem
   }
   .dark {
+
+    touch-action: manipulation;
 
     --background: 222.2 84% 4.9%;
 
